added react router and routed components

--- a/frontend/src/components/NavBar.scss
+++ b/frontend/src/components/NavBar.scss
@@ -19,8 +19,10 @@
         .logo-upfunds {
             margin-right: 3vw;
         }
-
-        a {
+        
+        .navlink {
+            text-decoration: none;
+            color: white;
             margin-right: 2vw;
         }
     }
