--- a/frontend/src/components/Register/Register.scss
+++ b/frontend/src/components/Register/Register.scss
@@ -7,9 +7,10 @@ $neon-pink: #b042f9;
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding: 50px;
+    padding: 15% 20%;
     background-color: #292b35;
     border-radius: 15px;
+    min-height: 400px;
 
     .fields {
         display: flex;
@@ -57,6 +58,11 @@ $neon-pink: #b042f9;
     color: white;
     transform: translate(-15px,-25px);
     cursor: pointer;
+
+    &:hover {
+        color: $neon-pink;
+    }
+
 }
 
 .visible {
