--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,3 +1,7 @@
+:root {
+  background-color: #1F2029;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +11,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
 
-  
 }
 
 code {
