--- a/frontend/src/components/Manager/CreateMutualFund.scss
+++ b/frontend/src/components/Manager/CreateMutualFund.scss
@@ -5,6 +5,8 @@ $neon-pink: #b042f9;
 $input-background: #212529;
 $input-text-color: #AEB2B6;
 
+
+
 .create-container {
     position: relative;
     width: 100vw;
@@ -17,7 +19,7 @@ $input-text-color: #AEB2B6;
     .create-fields {
         margin-top: 2%;
         width: 50%;
-        height: 100%;
+        height: 430px;
         background-color: $base-fade-background;
         border-radius: 15px;
         color: $input-text-color;
@@ -45,10 +47,29 @@ $input-text-color: #AEB2B6;
 
         .right-container {
             width: 50%;
-            height: 100%;
+            height: 90%;
             padding-left: 30px;
             color: white;
             padding: 3.5% 0 4% 0;
+
+            .stock-table {
+
+                th {
+                    border-collapse: separate !important;
+                    background: none;
+                    border: 1px solid $input-text-color;
+                    border-radius: 20px;
+                    border-spacing: 0;
+                }
+
+                td {
+                    background: none;
+                    border-collapse: separate !important;
+                    border: 1px solid $input-text-color;
+                    border-radius: 20px;
+                    border-spacing: 0;
+                }
+            }
 
             .stock-header {
                 margin-left: 6%;
@@ -62,8 +83,34 @@ $input-text-color: #AEB2B6;
             }
 
             .stock-list-container {
+                margin: 10px;
                 padding: 20px;
                 text-align: center;
+                overflow-y: scroll;
+                height: 100%;
+
+                /* ===== Scrollbar CSS ===== */
+                /* Firefox */
+                & {
+                    scrollbar-width: auto;
+                    scrollbar-color: #8167a9 #ffffff00;
+                }
+
+                /* Chrome, Edge, and Safari */
+                &::-webkit-scrollbar {
+                    width: 5px;
+                }
+
+                &::-webkit-scrollbar-track {
+                    background: none;
+                }
+
+                &::-webkit-scrollbar-thumb {
+                    background-color: #8167a9;
+                    border-radius: 16px;
+                    border: 0px solid #ffffff;
+                }
+
             }
         }
     }
@@ -77,10 +124,12 @@ $input-text-color: #AEB2B6;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 40px;
+    
 
     .stock-btn {
         cursor: pointer;
-        padding: 5px 10px;
+        padding: 5px 20px;
         margin: 5px auto;
         border-radius: 5px;
         background-color: $base-control-color;
@@ -89,7 +138,7 @@ $input-text-color: #AEB2B6;
     }
 
     .submit-btn {
-        padding: 5px 25px;
+        padding: 5px 10px;
         margin-top: 10px;
         background-color: rgb(30, 96, 176);
     }
@@ -124,16 +173,18 @@ $input-text-color: #AEB2B6;
         background-color: $base-fade-background;
         border-radius: 15px;
         border: 2px solid $base-control-color;
-        padding: 30px 40px;
+        padding: 20px 10px;
         max-height: 80vh;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
 
+
         .stock-data-top-header {
             width: 100%;
             height: 30px;
             display: flex;
+            padding: 0 30px;
             justify-content: space-between;
             color: white;
             font-weight: 600;
@@ -143,16 +194,50 @@ $input-text-color: #AEB2B6;
         .stock-data-top {
             width: 100%;
             height: 80%;
-            padding-top: 4px;
+            padding: 4px 20px;
             overflow-y: scroll;
+
+            & {
+                scrollbar-width: auto;
+                scrollbar-color: #8167a9 #ffffff00;
+            }
+
+            /* Chrome, Edge, and Safari */
+            &::-webkit-scrollbar {
+                width: 5px;
+            }
+
+            &::-webkit-scrollbar-track {
+                background: none;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background-color: #8167a9;
+                border-radius: 16px;
+                border: 0px solid #ffffff;
+            }
+
+
+
         }
 
         .stock-data-bottom {
             width: 100%;
             height: 10%;
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 15px 0 15px;
+
+
+
+            .corpus-value {
+                font-weight: 500;
+            }
 
             .add-stocks {
-                padding: 10px 20px;
+                padding: 5px 10px;
                 border: none;
                 background-color: $base-control-color;
                 color: white;
