--- a/frontend/src/components/Register/Register.scss
+++ b/frontend/src/components/Register/Register.scss
@@ -2,6 +2,15 @@ $base-background : #1F2029;
 $base-control-color: #8167A9;
 $neon-pink: #b042f9;
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    appearance: none;
+    margin: 0;
+    display: none;
+    /* Hide the arrows */
+}
+
 .login-container {
     width: 100%;
     height: 100%;
@@ -33,7 +42,7 @@ $neon-pink: #b042f9;
         font-weight: 600;
     }
 
-    
+
 }
 
 .link-container {
@@ -43,6 +52,7 @@ $neon-pink: #b042f9;
     width: 100%;
     color: white;
     margin-left: 1%;
+
     .login-link {
         text-decoration: none;
         font-weight: 500;
@@ -56,7 +66,7 @@ $neon-pink: #b042f9;
 .eye {
     float: right;
     color: white;
-    transform: translate(-15px,-25px);
+    transform: translate(-15px, -25px);
     cursor: pointer;
 
     &:hover {
