--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,6 +1,32 @@
 :root {
   background-color: #1F2029;
+
+
 }
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #8f54a0 #363636;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 20px;
+}
+
+*::-webkit-scrollbar-track {
+  // background: #363636;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #8f54a0;
+  border-radius: 10px;
+  border: 6px solid #1F2029;
+}
+
+
 
 body {
   margin: 0;
