--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -5,36 +5,370 @@ $neon-pink: #b042f9;
 $input-background: #212529;
 $input-text-color: #AEB2B6;
 
-.navbar-container {
-    width: 100vw;
-    height: 60px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    font-weight: 500;
-    background-color: #292b35;
-    border-radius: 0 0 20px 20px;
-    border-bottom: 2px solid $base-control-color;
+* {
+    transition: .1s  ease-in;
+    box-sizing: border-box;
+}
 
+
+
+.navbar-container {
+    position: sticky;
+    top: 0;
+    z-index: 30;
 
     .left-part {
+        position: absolute;
+        z-index: 30;
+        top: 10px;
+        left: 5;
+        width: 40%;
+        height: 50px;
+        background: none;
         display: flex;
-        flex-direction: row;
-
-        .logo-upfunds {
-            margin-right: 3vw;
-        }
+        align-items: center;
+        padding: 5px 10px 5px 5px;
+        font-size: 20px;
 
         .navlink {
+            display: grid;
+            place-items: center;
+            text-align: center;
             text-decoration: none;
-            color: white;
-            margin-right: 2vw;
+            color: $input-text-color;
+            margin-left: 35px;
+            // transform: translateY(-4px);
+            background-color: $base-fade-background;
+            padding: 12px;
+            border-radius: 50%;
+            border: 1px solid white;
+            &:hover{
+                transition: 0.12s linear;
+                color: white;
+                background-color: #292b353d;
+            }
+
+        }
+
+
+    }
+
+
+
+
+
+    .right-part {
+        position: absolute;
+        z-index: 30;
+        top: 10px;
+        right: 0;
+        margin-right: 10px;
+        width: 15%;
+        height: 60px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        padding: 5px;
+        opacity: 1;
+        // border: 1.5px solid $base-control-color;
+
+        .profile-pic {
+            cursor: pointer;
+
+            &:hover{
+                border: 1px solid white;
+            }
+        }
+
+        .signout {
+            cursor: pointer;
+            padding: 5px 20px;
+            border-radius: 15px;
+            font-weight: 500;
+            color: $base-control-color;
+            background: none;
+            border: 1px solid $input-text-color;
+            
+            &:hover {
+                background-color: #8167A9;
+                color: white;
+                border: 1px solid #8167A9;
+            }
         }
     }
+}
+
+@keyframes animateProfile {
+    0%{
+        background-color: $base-fade-background;
+        visibility: hidden;
+        width: 0%;
+        height: 0;
+        opacity: 0;
+    }
+    25%{
+        background-color: $base-fade-background;
+        visibility: hidden;
+        width: 4%;
+        height: 10px;
+        opacity: 0.6;
+    }
+    50%{
+        background-color: $base-fade-background;
+        visibility: hidden;
+        width: 6%;
+        height: 30px;
+        opacity: 0.8;
+        
+    }
+    75%{
+        opacity: 0.9;
+        background-color: $base-fade-background;
+        width: 10%;
+        height: 40px;
+        
+    }
+    100%{
+        opacity: 1;
+        background-color: $base-fade-background;
+        width: 15%;
+        height: 60px;
+        visibility: visible;
+    }
+}
+
+.open-profile {
+    background-color: $base-fade-background;
+    opacity: 1;
+    border-radius: 20px;
+    visibility: visible;
+    animation: animateProfile 0.1s ease-in-out;
+}
+
+.close-container {
+    opacity: 0;
+}
+
+.close-profile {
+    visibility: hidden;
+}
+@keyframes animateHomeIn {
+    from {
+        transform: translate(0);
+        visibility: visible;
+    }
+
+    to {
+        transform: translate(-80px);
+        visibility: hidden;
+    }
+}
+
+@keyframes animateAboutIn {
+    from {
+        transform: translate(0);
+        visibility: visible;
+    }
+
+    to {
+        transform: translate(-160px);
+        visibility: hidden;
+    }
+}
+
+@keyframes animateContactIn {
+    from {
+        transform: translate(0);
+        visibility: visible;
+    }
+
+    to {
+        transform: translate(-240px);
+        visibility: hidden;
+    }
+}
+
+@keyframes animateHomeOut {
+    from {
+        transform: translate(-80px);
+        visibility: hidden;
+    }
+
+    to {
+        transform: translate(0);
+        visibility: visible;
+    }
+}
+
+@keyframes animateAboutOut {
+    from {
+        transform: translate(-160px);
+        visibility: hidden;
+    }
+
+    to {
+        transform: translate(0);
+        visibility: visible;
+    }
+}
+
+@keyframes animateContactOut {
+    from {
+        transform: translate(-240px);
+        visibility: hidden;
+    }
+
+    to {
+        transform: translate(0);
+        visibility: visible;
+    }
+}
+
+.ham {
+    &:hover {
+        background-color: $base-fade-background;
+        padding: 2px;
+        display: grid;
+        place-items: center;
+        border-radius: 50%;
+    }
+}
+
+
+
+.move-in-home {
+    transform: translateX(-80px);
+    visibility: hidden;
+    animation: animateHomeIn 0.2s linear;
+
+}
+
+.move-in-about {
+    transform: translateX(-160px);
+    visibility: hidden;
+    animation: animateAboutIn 0.2s linear;
+
+}
+
+.move-in-contact {
+    transform: translateX(-240px);
+    visibility: hidden;
+    animation: animateContactIn 0.2s linear;
+
+}
+
+
+.move-out-home {
+    animation: animateHomeOut 0.2s linear;
+
+}
+
+.move-out-about {
+    animation: animateAboutOut 0.2s linear;
+
+}
+
+.move-out-contact {
+    animation: animateContactOut 0.2s linear;
+
+
+}
+
+.nav-icon-4 {
+    width: 35px;
+    height: 30px;
+    margin: 10px 10px;
+    position: relative;
+    cursor: pointer;
+    display: inline-block;
+    transform: scale(0.8);
+}
+
+.nav-icon-4 span {
+    background-color: #FFF;
+    position: absolute;
+    border-radius: 2px;
+    transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+}
+
+.nav-icon-4 span:nth-child(1) {
+    width: 100%;
+    height: 4px;
+    display: block;
+    top: 0px;
+    left: 0px;
+}
+
+.nav-icon-4 span:nth-child(2) {
+    width: 100%;
+    height: 4px;
+    display: block;
+    top: 13px;
+    left: 0px;
+}
+
+.nav-icon-4 span:nth-child(3) {
+    width: 100%;
+    height: 4px;
+    display: block;
+    bottom: 0px;
+    left: 0px;
+}
+
+.nav-icon-4:not(.open):hover span:nth-child(1) {
+    width: 100%;
+    height: 4px;
+    display: block;
+    top: -2px;
+    left: 0px;
+    transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+}
+
+.nav-icon-4:not(.open):hover span:nth-child(2) {
+    width: 100%;
+    height: 4px;
+    display: block;
+    top: 13px;
+    left: 0px;
+    transition: .4s cubic-bezier(.8, .5, .2, 1.4);
+}
+
+.nav-icon-4:not(.open):hover span:nth-child(3) {
+    width: 100%;
+    height: 4px;
+    display: block;
+    bottom: -2px;
+    left: 0px;
+    transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+}
+
+.nav-icon-4.open {
+    transform: rotate(90deg);
+}
+
+.nav-icon-4.open span:nth-child(1) {
+    left: 3px;
+    top: 12px;
+    width: 30px;
+    transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+    transform: rotate(90deg);
+    transition-delay: 150ms;
+}
+
+.nav-icon-4.open span:nth-child(2) {
+    left: 2px;
+    top: 20px;
+    width: 20px;
+    transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+    transform: rotate(45deg);
+    transition-delay: 50ms;
+}
+
+.nav-icon-4.open span:nth-child(3) {
+    left: 14px;
+    top: 20px;
+    width: 20px;
+    transition: .3s cubic-bezier(.8, .5, .2, 1.4);
+    transform: rotate(-45deg);
+    transition-delay: 100ms;
 }
