added database files

--- a/frontend/src/components/Manager/CreateMutualFund.scss
+++ b/frontend/src/components/Manager/CreateMutualFund.scss
@@ -5,305 +5,16 @@ $neon-pink: #b042f9;
 $input-background: #212529;
 $input-text-color: #AEB2B6;
 
-
-
 .create-container {
-    position: relative;
-    width: 100vw;
-    height: calc(100vh - 60px);
-    display: flex;
-    justify-content: center;
-    background-color: $base-background;
-    padding: 60px 0 0 0;
-
-    .create-fields {
-        margin-top: 2%;
-        width: 50%;
-        height: 430px;
-        background-color: $base-fade-background;
-        border-radius: 15px;
-        color: $input-text-color;
-        display: flex;
-        border: 2px solid $base-control-color;
-
-        .left-container {
-            width: 50%;
-            height: 100%;
-            padding: 4% 20px 4% 4%;
-            position: relative;
-        }
-
-        .field-label {
-            font-weight: 500;
-            color: white;
-            // text-align: center;
-        }
-
-        .line-part {
-            height: 100%;
-            width: 2px;
-            background-color: $base-control-color;
-        }
-
-        .right-container {
-            width: 50%;
-            height: 90%;
-            padding-left: 30px;
-            color: white;
-            padding: 3.5% 0 4% 0;
-
-            .stock-table {
-
-                th {
-                    border-collapse: separate !important;
-                    background: none;
-                    border: 1px solid $input-text-color;
-                    border-radius: 20px;
-                    border-spacing: 0;
-                }
-
-                td {
-                    background: none;
-                    border-collapse: separate !important;
-                    border: 1px solid $input-text-color;
-                    border-radius: 20px;
-                    border-spacing: 0;
-                }
-            }
-
-            .stock-header {
-                margin-left: 6%;
-                margin-bottom: 6%;
-            }
-
-            .line {
-                height: 2px;
-                width: 100%;
-                background-color: $base-control-color;
-            }
-
-            .stock-list-container {
-                margin: 10px;
-                padding: 20px;
-                text-align: center;
-                overflow-y: scroll;
-                height: 100%;
-
-                /* ===== Scrollbar CSS ===== */
-                /* Firefox */
-                & {
-                    scrollbar-width: auto;
-                    scrollbar-color: #8167a9 #ffffff00;
-                }
-
-                /* Chrome, Edge, and Safari */
-                &::-webkit-scrollbar {
-                    width: 5px;
-                }
-
-                &::-webkit-scrollbar-track {
-                    background: none;
-                }
-
-                &::-webkit-scrollbar-thumb {
-                    background-color: #8167a9;
-                    border-radius: 16px;
-                    border: 0px solid #ffffff;
-                }
-
-            }
-        }
-    }
-
-}
-
-.btn-group {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 40px;
-    
-
-    .stock-btn {
-        cursor: pointer;
-        padding: 5px 20px;
-        margin: 5px auto;
-        border-radius: 5px;
-        background-color: $base-control-color;
-        border: none;
-        font-weight: 500;
-    }
-
-    .submit-btn {
-        padding: 5px 10px;
-        margin-top: 10px;
-        background-color: rgb(30, 96, 176);
-    }
-}
-
-.stock-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 40;
     width: 100vw;
     height: 100vh;
     display: grid;
     place-items: center;
+    background-color: $base-background;
 
-    .stock-form {
-        width: 100%;
-        height: 100%;
-        /* From https://css.glass */
-        background: rgba(0, 0, 0, 0.189);
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.059);
-        backdrop-filter: blur(5px);
-        -webkit-backdrop-filter: blur(5px);
-        /* Apply blur effect to content behind the element */
-        display: grid;
-        place-items: center;
+    .input-container {
+        background-color: red;
+        width: 60%;
+        height: fit-content;
     }
-
-    .stock-data {
-        width: 40%;
-        height: 80%;
-        background-color: $base-fade-background;
-        border-radius: 15px;
-        border: 2px solid $base-control-color;
-        padding: 20px 10px;
-        max-height: 80vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-
-
-        .stock-data-top-header {
-            width: 100%;
-            height: 30px;
-            display: flex;
-            padding: 0 30px;
-            justify-content: space-between;
-            color: white;
-            font-weight: 600;
-
-        }
-
-        .stock-data-top {
-            width: 100%;
-            height: 80%;
-            padding: 4px 20px;
-            overflow-y: scroll;
-
-            & {
-                scrollbar-width: auto;
-                scrollbar-color: #8167a9 #ffffff00;
-            }
-
-            /* Chrome, Edge, and Safari */
-            &::-webkit-scrollbar {
-                width: 5px;
-            }
-
-            &::-webkit-scrollbar-track {
-                background: none;
-            }
-
-            &::-webkit-scrollbar-thumb {
-                background-color: #8167a9;
-                border-radius: 16px;
-                border: 0px solid #ffffff;
-            }
-
-
-
-        }
-
-        .stock-data-bottom {
-            width: 100%;
-            height: 10%;
-            color: white;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 15px 0 15px;
-
-
-
-            .corpus-value {
-                font-weight: 500;
-            }
-
-            .add-stocks {
-                padding: 5px 10px;
-                border: none;
-                background-color: $base-control-color;
-                color: white;
-                font-weight: 500;
-                border-radius: 6px;
-            }
-        }
-
-        .form-fields {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            width: 100%;
-        }
-
-        .checkbox-field {
-            width: 40%;
-            background-color: $input-background;
-            border: none;
-            color: $input-text-color;
-            text-align: center;
-
-        }
-
-
-
-        .check-field {
-            margin-top: 4px;
-            width: 100%;
-            height: 40px;
-            display: flex;
-
-            .checkbox {
-                color: $input-text-color;
-                font-weight: 500;
-            }
-
-        }
-
-        .form-check-input[type="checkbox"]:hover,
-        .form-check-label:hover {
-            cursor: pointer;
-        }
-
-
-    }
-
-    .close {
-        position: absolute;
-        top: 0;
-        right: 0;
-        z-index: 30;
-        font-size: 2em;
-        padding: 5px;
-        margin: 5px 15px 0 0;
-        background: none;
-        border: none;
-        color: white;
-    }
-}
-
-.visible {
-    display: none;
-}
-
-
-.invalid {
-    border-color: red;
 }
