--- a/frontend/src/components/Manager/CreateMutualFund.scss
+++ b/frontend/src/components/Manager/CreateMutualFund.scss
@@ -79,6 +79,22 @@ $input-text-color: #AEB2B6;
             color: white;
             display: flex;
             justify-content: center;
+
+            .data-table {
+                width: 100%;
+                height: 100%;
+
+                .table-head{
+                    width: 100%;
+                    height: fit-content;
+                    // display: flex;
+                    // align-items: center;
+
+                    .header-field {
+                        margin-left: 10px;
+                    }
+                }
+            }
         }
     }
 }
